# data-science

./: README.md
churn-risk/: .gitignore  README.md  requirements.txt
churn-risk/src/: baseline.py  train_best.py  tune.py
fraud-risk-pipeline/: .env.example  .gitignore  README.md  requirements.txt
fraud-risk-pipeline/api/: main.py
fraud-risk-pipeline/ingestion/: db.py  ingest_raw.py  init_db.py  make_demo_payload.py  quick_check.py  run_sql.py
fraud-risk-pipeline/model/: baseline.py
fraud-risk-pipeline/sql/: 001_create_raw.sql  010_create_stg.sql  020_create_features_schema.sql  030_build_fraud_features.sql
local-rag-docs/: .gitignore  README.md  pyproject.toml  requirements.txt
local-rag-docs/api/: main.py
local-rag-docs/data/docs/: sample.txt
local-rag-docs/src/: answering.py  chunk_test.py  cli.py  eval.py  ingest.py  llm_openai.py  loaders.py  prompting.py  query.py  utils.py
